# grpc-vtt-sent-pattern

./: Makefile  README.md  go.mod  go.sum
api/: api.proto
cmd/client/: main.go
cmd/client/api/: api.pb.go  api_grpc.pb.go
cmd/sentserver/: main.py  pyproject.toml
cmd/sentserver/api/: api_pb2.py  api_pb2_grpc.py
